--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <p><strong>JAVA版アドレス:</strong> 147.185.221.25:10228</p>
             <p><strong>統合版アドレス:</strong> 147.185.221.25:1304</p>
             <p><strong>バージョン:</strong> 1.21.4</p>
-            <p><strong>サーバー稼働状況:</strong> 稼働中</p>
+            <p><strong>サーバー稼働状況:</strong> 荒らしがいたため休止中。現在復旧作業中</p>
             <p><strong>説明:</strong> TNK首都圏動画係技術研究部によるマイクラサーバーこのサーバーはNintendoSwitchでも入れます！</p>
             <h3>ルール</h3>
             <ul>
