--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- ページの説明 -->
     <meta name="description" content="動画係マイクラサーバーはJAVA版と統合版に対応したクロスプレイ可能なサーバーです。FastServer v4接続方法を含む、多様なサーバー情報を提供します。ただしJAVA限定です。">
     <!-- 検索キーワード -->
-    <meta name="keywords" content="Minecraft, マイクラ, サーバー, クロスプレイ, JAVA版, 統合版, FastServer v4, Minecraftサーバー">
+    <meta name="keywords" content="Minecraft, マイクラ, サーバー, クロスプレイ, JAVA版, 統合版, FastServer v4, Minecraftサーバー,動画係,TNK,TNK首都圏,TNK首都圏局まいくら鯖部">
     <!-- サイト運営者情報 -->
     <meta name="author" content="TNK首都圏動画係マイクラサーバー運営">
     <style>
