--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 </div>
                 <div>
                     <h3>FastServer v4対応</h3>
-                    <p>CONNETに対応！（JAVA限定）</p>
+                    <p>CONNETに対応！</p>
                 </div>
             </div>
         </div>
