--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <div class="carousel-container">
             <div class="carousel-item">
                 <video controls>
-                    <iframe src="https://1drv.ms/v/c/b7a25ea3eafba159/IQQSwpRXZIV5Sa-IH9McJqlQAadEm7pymPx3k3z-WxdnLA4" width="1920" height="1080" frameborder="0" scrolling="no" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/n2havPqbof8?si=uqYJZETshvB53RYz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     申し訳ございませんがお使いのブラウザは、動画にサポートしてない可能性があります。
                 </video>
             </div>
