--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@
         .carousel-item {
             min-width: 100%;
         }
-        video {
+        iframe {
             width: 100%;
             height: auto;
+            border: none;
         }
         .arrow {
             position: absolute;
@@ -149,16 +150,25 @@
     <div class="carousel">
         <div class="carousel-container">
             <div class="carousel-item">
-                <video controls>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/n2havPqbof8?si=uqYJZETshvB53RYz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                    申し訳ございませんがお使いのブラウザは、動画にサポートしてない可能性があります。
-                </video>
+                <iframe 
+                    width="560" 
+                    height="315" 
+                    src="https://www.youtube.com/embed/n2havPqbof8?si=uqYJZETshvB53RYz" 
+                    title="YouTube video player" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                    referrerpolicy="strict-origin-when-cross-origin" 
+                    allowfullscreen>
+                </iframe>
             </div>
             <div class="carousel-item">
-                <video controls>
-                    <iframe src="https://1drv.ms/v/c/b7a25ea3eafba159/IQQSwpRXZIV5Sa-IH9McJqlQAadEm7pymPx3k3z-WxdnLA4" width="320" height="320" frameborder="0" scrolling="no" allowfullscreen></iframe>
-                    お使いのブラウザは動画タグをサポートしていません。
-                </video>
+                <iframe 
+                    width="320" 
+                    height="320" 
+                    src="https://1drv.ms/v/c/b7a25ea3eafba159/IQQSwpRXZIV5Sa-IH9McJqlQAadEm7pymPx3k3z-WxdnLA4" 
+                    title="OneDrive video player" 
+                    scrolling="no" 
+                    allowfullscreen>
+                </iframe>
             </div>
         </div>
         <button class="arrow left" onclick="moveSlide(-1)">&#10094;</button>
@@ -230,3 +240,4 @@
         }
     </script>
 </body>
+</html>
