--- a/index.html
+++ b/index.html
@@ -1,243 +1,256 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>動画係マイクラサーバー - クロスプレイ対応</title>
-    <!-- ページの説明 -->
-    <meta name="description" content="動画係マイクラサーバーはJAVA版と統合版に対応したクロスプレイ可能なサーバーです。FastServer v4接続方法を含む、多様なサーバー情報を提供します。ただしJAVA限定です。">
-    <!-- 検索キーワード -->
-    <meta name="keywords" content="Minecraft, マイクラ, サーバー, クロスプレイ, JAVA版, 統合版, FastServer v4, Minecraftサーバー,動画係,TNK,TNK首都圏,TNK首都圏局まいくら鯖部">
-    <!-- サイト運営者情報 -->
-    <meta name="author" content="TNK首都圏動画係マイクラサーバー運営">
-    <style>
-        /* 基本のスタイル */
-        body {
-            margin: 0;
-            font-family: 'Arial', sans-serif;
-            background-color: #121212;
-            color: white;
-        }
-        header {
-            text-align: center;
-            padding: 20px;
-            background-color: #1f1f1f;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-        }
-        header h1 {
-            font-size: 2.5rem;
-            margin: 0;
-        }
-        header p {
-            font-size: 1.2rem;
-            margin: 0;
-        }
-        .carousel {
-            position: relative;
-            width: 80%;
-            max-width: 800px;
-            margin: 50px auto;
-            overflow: hidden;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-        }
-        .carousel-container {
-            display: flex;
-            transition: transform 0.5s ease-in-out;
-        }
-        .carousel-item {
-            min-width: 100%;
-        }
-        iframe {
-            width: 100%;
-            height: auto;
-            border: none;
-        }
-        .arrow {
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            font-size: 2rem;
-            color: white;
-            background-color: rgba(0, 0, 0, 0.5);
-            border: none;
-            padding: 10px;
-            cursor: pointer;
-            z-index: 10;
-            border-radius: 50%;
-        }
-        .arrow.left {
-            left: 10px;
-        }
-        .arrow.right {
-            right: 10px;
-        }
-        .arrow:hover {
-            background-color: rgba(0, 0, 0, 0.8);
-        }
-        .container {
-            max-width: 1200px;
-            margin: 20px auto;
-            padding: 0 20px;
-        }
-        .info-section, .how-to-section {
-            margin: 20px 0;
-            padding: 20px;
-            background-color: #1c1c1c;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-        }
-        h2 {
-            font-size: 2rem;
-            margin-bottom: 10px;
-            color: #4caf50;
-        }
-        .server-details {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 20px;
-            justify-content: space-between;
-        }
-        .server-details div {
-            background-color: #272727;
-            padding: 10px;
-            border-radius: 8px;
-            flex: 1;
-            min-width: 250px;
-            text-align: center;
-        }
-        .how-to-list {
-            list-style-type: none;
-            padding: 0;
-        }
-        .how-to-list li {
-            margin-bottom: 10px;
-            background-color: #272727;
-            padding: 10px;
-            border-radius: 8px;
-        }
-        .how-to-list a {
-            color: #4caf50;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        .how-to-list a:hover {
-            text-decoration: underline;
-        }
-        footer {
-            text-align: center;
-            padding: 20px;
-            background-color: #1f1f1f;
-            color: #888;
-            font-size: 0.9rem;
-        }
-        footer a {
-            color: #4caf50;
-            text-decoration: none;
-        }
-        footer a:hover {
-            text-decoration: underline;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>動画係マイクラサーバー - クロスプレイ対応</title>
+  <!-- ページの説明 -->
+  <meta name="description" content="動画係マイクラサーバーはJAVA版と統合版に対応したクロスプレイ可能なサーバーです。FastServer v4接続方法を含む、多様なサーバー情報を提供します。ただしJAVA限定です。">
+  <!-- 検索キーワード -->
+  <meta name="keywords" content="Minecraft, マイクラ, サーバー, クロスプレイ, JAVA版, 統合版, FastServer v4, Minecraftサーバー,動画係,TNK,TNK首都圏,TNK首都圏局まいくら鯖部">
+  <!-- サイト運営者情報 -->
+  <meta name="author" content="TNK首都圏動画係マイクラサーバー運営">
+  <style>
+    /* 基本のスタイル */
+    body {
+      margin: 0;
+      font-family: 'Arial', sans-serif;
+      background-color: #121212;
+      color: white;
+    }
+    header {
+      text-align: center;
+      padding: 20px;
+      background-color: #1f1f1f;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    }
+    header h1 {
+      font-size: 2.5rem;
+      margin: 0;
+    }
+    header p {
+      font-size: 1.2rem;
+      margin: 0;
+    }
+
+    /* カルーセルセクション */
+    .carousel {
+      position: relative;
+      width: 80%;
+      max-width: 800px;
+      margin: 50px auto;
+      overflow: hidden;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+    }
+    .carousel-container {
+      display: flex;
+      transition: transform 0.5s ease-in-out;
+    }
+    .carousel-item {
+      min-width: 100%;
+    }
+    /* 16:9動画ラッパー（最大1920×1080） */
+    .video-wrapper {
+      position: relative;
+      width: 100%;
+      max-width: 1920px; /* 最大幅1920px */
+      margin: auto;
+      padding-bottom: 56.25%; /* 16:9のアスペクト比（9/16=0.5625） */
+    }
+    .video-wrapper iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+    .arrow {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      font-size: 2rem;
+      color: white;
+      background-color: rgba(0, 0, 0, 0.5);
+      border: none;
+      padding: 10px;
+      cursor: pointer;
+      z-index: 10;
+      border-radius: 50%;
+    }
+    .arrow.left {
+      left: 10px;
+    }
+    .arrow.right {
+      right: 10px;
+    }
+    .arrow:hover {
+      background-color: rgba(0, 0, 0, 0.8);
+    }
+    .container {
+      max-width: 1200px;
+      margin: 20px auto;
+      padding: 0 20px;
+    }
+    .info-section, .how-to-section {
+      margin: 20px 0;
+      padding: 20px;
+      background-color: #1c1c1c;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    }
+    h2 {
+      font-size: 2rem;
+      margin-bottom: 10px;
+      color: #4caf50;
+    }
+    .server-details {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      justify-content: space-between;
+    }
+    .server-details div {
+      background-color: #272727;
+      padding: 10px;
+      border-radius: 8px;
+      flex: 1;
+      min-width: 250px;
+      text-align: center;
+    }
+    .how-to-list {
+      list-style-type: none;
+      padding: 0;
+    }
+    .how-to-list li {
+      margin-bottom: 10px;
+      background-color: #272727;
+      padding: 10px;
+      border-radius: 8px;
+    }
+    .how-to-list a {
+      color: #4caf50;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .how-to-list a:hover {
+      text-decoration: underline;
+    }
+    footer {
+      text-align: center;
+      padding: 20px;
+      background-color: #1f1f1f;
+      color: #888;
+      font-size: 0.9rem;
+    }
+    footer a {
+      color: #4caf50;
+      text-decoration: none;
+    }
+    footer a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <h1>動画係マイクラサーバー - クロスプレイ対応</h1>
-        <p>JAVA版も統合版も楽しめるクロスプレイ対応サーバー</p>
-    </header>
+  <header>
+    <h1>動画係マイクラサーバー - クロスプレイ対応</h1>
+    <p>JAVA版も統合版も楽しめるクロスプレイ対応サーバー</p>
+  </header>
 
-    <!-- カルーセルセクション -->
-    <div class="carousel">
-        <div class="carousel-container">
-            <div class="carousel-item">
-                <iframe 
-                    width="560" 
-                    height="315" 
-                    src="https://www.youtube.com/embed/n2havPqbof8?si=uqYJZETshvB53RYz" 
-                    title="YouTube video player" 
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                    referrerpolicy="strict-origin-when-cross-origin" 
-                    allowfullscreen>
-                </iframe>
-            </div>
-            <div class="carousel-item">
-                <iframe 
-                    width="320" 
-                    height="320" 
-                    src="https://1drv.ms/v/c/b7a25ea3eafba159/IQQSwpRXZIV5Sa-IH9McJqlQAadEm7pymPx3k3z-WxdnLA4" 
-                    title="OneDrive video player" 
-                    scrolling="no" 
-                    allowfullscreen>
-                </iframe>
-            </div>
+  <!-- カルーセルセクション -->
+  <div class="carousel">
+    <div class="carousel-container">
+      <div class="carousel-item">
+        <div class="video-wrapper">
+          <iframe 
+            src="https://www.youtube.com/embed/n2havPqbof8?si=uqYJZETshvB53RYz" 
+            title="YouTube video player" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            referrerpolicy="strict-origin-when-cross-origin" 
+            allowfullscreen>
+          </iframe>
         </div>
-        <button class="arrow left" onclick="moveSlide(-1)">&#10094;</button>
-        <button class="arrow right" onclick="moveSlide(1)">&#10095;</button>
+      </div>
+      <div class="carousel-item">
+        <div class="video-wrapper">
+          <iframe 
+            src="https://1drv.ms/v/c/b7a25ea3eafba159/IQQSwpRXZIV5Sa-IH9McJqlQAadEm7pymPx3k3z-WxdnLA4" 
+            title="OneDrive video player" 
+            scrolling="no" 
+            allowfullscreen>
+          </iframe>
+        </div>
+      </div>
+    </div>
+    <button class="arrow left" onclick="moveSlide(-1)">&#10094;</button>
+    <button class="arrow right" onclick="moveSlide(1)">&#10095;</button>
+  </div>
+
+  <div class="container">
+    <!-- サーバー情報セクション -->
+    <div class="info-section">
+      <h2>サーバー情報</h2>
+      <div class="server-details">
+        <div>
+          <h3>JAVA版 IPアドレス</h3>
+          <p>147.185.221.25:10288</p>
+        </div>
+        <div>
+          <h3>統合版 IPアドレス</h3>
+          <p>147.185.221.25</p>
+          <p>ポート: 1304</p>
+        </div>
+        <div>
+          <h3>バージョン</h3>
+          <p>最新バージョン対応</p>
+        </div>
+        <div>
+          <h3>FastServer v4対応</h3>
+          <p>CONNETに対応！</p>
+        </div>
+      </div>
     </div>
 
-    <div class="container">
-        <!-- サーバー情報セクション -->
-        <div class="info-section">
-            <h2>サーバー情報</h2>
-            <div class="server-details">
-                <div>
-                    <h3>JAVA版 IPアドレス</h3>
-                    <p>147.185.221.25:10288</p>
-                </div>
-                <div>
-                    <h3>統合版 IPアドレス</h3>
-                    <p>147.185.221.25</p>
-                    <p>ポート: 1304</p>
-                </div>
-                <div>
-                    <h3>バージョン</h3>
-                    <p>最新バージョン対応</p>
-                </div>
-                <div>
-                    <h3>FastServer v4対応</h3>
-                    <p>CONNETに対応！</p>
-                </div>
-            </div>
-        </div>
-
-        <!-- サーバーへの入り方 -->
-        <div class="how-to-section">
-            <h2>マイクラサーバーへの入り方</h2>
-            <ul class="how-to-list">
-                <li>
-                    <strong>JAVA版:</strong> <a href="java_guide.html" target="_blank">JAVA版の詳細な入り方はこちら</a>
-                </li>
-                <li>
-                    <strong>スマホやタブレット（統合版）:</strong> <a href="bedrock_guide.html" target="_blank">統合版の詳細な入り方はこちら</a>
-                </li>
-                <li>
-                    <strong>コンソール版（Xbox/PS/Nintendo Switchなど）:</strong> <a href="console_guide.html" target="_blank">コンソール版の詳細な入り方はこちら</a>
-                </li>
-                <li>
-                    <strong>FastServerV4 CONNETから:</strong> <a href="conect_guide.html" target="_blank">FastServer v4 CONNECTからの詳細な入り方はこちら</a>
-                </li>
-            </ul>
-        </div>
+    <!-- サーバーへの入り方 -->
+    <div class="how-to-section">
+      <h2>マイクラサーバーへの入り方</h2>
+      <ul class="how-to-list">
+        <li>
+          <strong>JAVA版:</strong> <a href="java_guide.html" target="_blank">JAVA版の詳細な入り方はこちら</a>
+        </li>
+        <li>
+          <strong>スマホやタブレット（統合版）:</strong> <a href="bedrock_guide.html" target="_blank">統合版の詳細な入り方はこちら</a>
+        </li>
+        <li>
+          <strong>コンソール版（Xbox/PS/Nintendo Switchなど）:</strong> <a href="console_guide.html" target="_blank">コンソール版の詳細な入り方はこちら</a>
+        </li>
+        <li>
+          <strong>FastServerV4 CONNETから:</strong> <a href="conect_guide.html" target="_blank">FastServer v4 CONNECTからの詳細な入り方はこちら</a>
+        </li>
+      </ul>
     </div>
+  </div>
 
-    <footer>
-        <p>© 2025 TNK首都圏動画係マイクラサーバー運営 | <a href="#">プライバシーポリシー</a></p>
-    </footer>
+  <footer>
+    <p>© 2025 TNK首都圏動画係マイクラサーバー運営 | <a href="#">プライバシーポリシー</a></p>
+  </footer>
 
-    <script>
-        let currentIndex = 0;
-        const container = document.querySelector('.carousel-container');
-        const items = document.querySelectorAll('.carousel-item');
+  <script>
+    let currentIndex = 0;
+    const container = document.querySelector('.carousel-container');
+    const items = document.querySelectorAll('.carousel-item');
 
-        function moveSlide(direction) {
-            currentIndex += direction;
-            if (currentIndex < 0) {
-                currentIndex = items.length - 1; // 最後のスライドに移動
-            } else if (currentIndex >= items.length) {
-                currentIndex = 0; // 最初のスライドに移動
-            }
-            container.style.transform = `translateX(-${currentIndex * 100}%)`;
-        }
-    </script>
+    function moveSlide(direction) {
+      currentIndex += direction;
+      if (currentIndex < 0) {
+        currentIndex = items.length - 1; // 最後のスライドに移動
+      } else if (currentIndex >= items.length) {
+        currentIndex = 0; // 最初のスライドに移動
+      }
+      container.style.transform = `translateX(-${currentIndex * 100}%)`;
+    }
+  </script>
 </body>
 </html>
