--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       <div class="carousel-item">
         <div class="video-wrapper">
           <iframe 
-            src="https://www.youtube.cqYJZETshvB53RYz" 
+            src=
             title="YouTube video player" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
             referrerpolicy="strict-origin-when-cross-origin" 
