--- a/index.html
+++ b/index.html
@@ -164,23 +164,26 @@
     <div class="carousel-container">
       <div class="carousel-item">
         <div class="video-wrapper">
-          <iframe 
-            src=
+    <iframe width="1920" height="1080" 
+            src="https://www.youtube.com/watch?v=4NTWGOTXJb8" 
             title="YouTube video player" 
+            frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
             referrerpolicy="strict-origin-when-cross-origin" 
             allowfullscreen>
-          </iframe>
+    </iframe>
         </div>
       </div>
       <div class="carousel-item">
         <div class="video-wrapper">
-          <iframe 
-            src="https://1drv.ms/v/c/b7a25ea3eafba159/IQQSwpRXZIV5Sa-IH9McJqlQAadEm7pymPx3k3z-WxdnLA4" 
-            title="OneDrive video player" 
-            scrolling="no" 
+    <iframe width="1920" height="1080" 
+            src="https://www.youtube.com/watch?v=hiO_8NSUBkU" 
+            title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            referrerpolicy="strict-origin-when-cross-origin" 
             allowfullscreen>
-          </iframe>
+    </iframe>
         </div>
       </div>
     </div>
