--- a/index.html
+++ b/index.html
@@ -164,12 +164,12 @@
     <div class="carousel-container">
       <div class="carousel-item">
         <div class="video-wrapper">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/4NTWGOTXJb8?si=68FBn9LljSr8_fK4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe src="https://1drv.ms/v/c/b7a25ea3eafba159/IQTVZzRnnmdDS5h9jrG-Ar5FAdhr_42muZc6a4Ng5xUBxVw" width="1920" height="1080" frameborder="0" scrolling="no" allowfullscreen></iframe>
         </div>
       </div>
       <div class="carousel-item">
         <div class="video-wrapper">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/hiO_8NSUBkU?si=ZM1qCeXIdscJf0oX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe src="https://1drv.ms/v/c/b7a25ea3eafba159/IQQofXPS5Rv3TZl6Gb_iKz1GAT-ghaMCULRDM5uLR4TYtWI" width="1920" height="1080" frameborder="0" scrolling="no" allowfullscreen></iframe>
         </div>
       </div>
     </div>
