--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
   <header>
     <h1>動画係マイクラサーバー - クロスプレイ対応</h1>
     <p>JAVA版も統合版も楽しめるクロスプレイ対応サーバー</p>
+    <p>現在サーバーは閉じています。ご了承ください。</p>
   </header>
 
   <!-- カルーセルセクション -->
