--- a/index.html
+++ b/index.html
@@ -208,16 +208,16 @@
       <h2>マイクラサーバーへの入り方</h2>
       <ul class="how-to-list">
         <li>
-          <strong>JAVA版:</strong> <a href="java_guide.html" target="_blank">JAVA版の詳細な入り方はこちら</a>
+          <strong>JAVA版:</strong> <a href="java_guide.html" target="_self">JAVA版の詳細な入り方はこちら</a>
         </li>
         <li>
-          <strong>スマホやタブレット（統合版）:</strong> <a href="bedrock_guide.html" target="_blank">統合版の詳細な入り方はこちら</a>
+          <strong>スマホやタブレット（統合版）:</strong> <a href="bedrock_guide.html" target="_self">統合版の詳細な入り方はこちら</a>
         </li>
         <li>
-          <strong>コンソール版（Xbox/PS/Nintendo Switchなど）:</strong> <a href="console_guide.html" target="_blank">コンソール版の詳細な入り方はこちら</a>
+          <strong>コンソール版（Xbox/PS/Nintendo Switchなど）:</strong> <a href="console_guide.html" target="_self">コンソール版の詳細な入り方はこちら</a>
         </li>
         <li>
-          <strong>FastServerV4 CONNETから:</strong> <a href="conect_guide.html" target="_blank">FastServer v4 CONNECTからの詳細な入り方はこちら</a>
+          <strong>FastServerV4 CONNETから:</strong> <a href="conect_guide.html" target="_self">FastServer v4 CONNECTからの詳細な入り方はこちら</a>
         </li>
       </ul>
     </div>
