--- a/index.html
+++ b/index.html
@@ -165,12 +165,12 @@
     <div class="carousel-container">
       <div class="carousel-item">
         <div class="video-wrapper">
-<iframe src="https://1drv.ms/v/c/b7a25ea3eafba159/IQTVZzRnnmdDS5h9jrG-Ar5FAdhr_42muZc6a4Ng5xUBxVw" width="1920" height="1080" frameborder="0" scrolling="no" allowfullscreen></iframe>
+        <iframe width="1280" height="720" src="https://www.youtube.com/embed/LtWknycYk84" title="動画係マイクラ鯖紹介動画" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
       </div>
       <div class="carousel-item">
         <div class="video-wrapper">
-<iframe src="https://1drv.ms/v/c/b7a25ea3eafba159/IQQofXPS5Rv3TZl6Gb_iKz1GAT-ghaMCULRDM5uLR4TYtWI" width="1920" height="1080" frameborder="0" scrolling="no" allowfullscreen></iframe>
+        <iframe width="1280" height="720" src="https://www.youtube.com/embed/TPTh50-w7XM" title="動画係マイクラ鯖ワールド全部紹介してみた" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
       </div>
     </div>
