--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>動画係マイクラサーバー - クロスプレイ対応</title>
+  <title>動画係公式マイクラ鯖</title>
+    <!-- ファビコン -->
+  <link rel=”icon” href=“/favicon.ico”>
+  <link rel=”icon” type=”image/vnd.microsoft.icon” href=“/favicon.ico”>
+  <link rel=”shortcut icon” href=”/favicon.ico”>
   <!-- ページの説明 -->
-  <meta name="description" content="動画係マイクラサーバーはJAVA版と統合版に対応したクロスプレイ可能なサーバーです。FastServer v4接続方法を含む、多様なサーバー情報を提供します。ただしJAVA限定です。">
+  <meta name="description" content="動画係マイクラサーバーはJAVA版と統合版に対応したクロスプレイ可能なサーバーです。">
   <!-- 検索キーワード -->
   <meta name="keywords" content="Minecraft, マイクラ, サーバー, クロスプレイ, JAVA版, 統合版, FastServer v4, Minecraftサーバー,動画係,TNK,TNK首都圏,TNK首都圏局まいくら鯖部">
   <!-- サイト運営者情報 -->
-  <meta name="author" content="TNK首都圏動画係マイクラサーバー運営">
+  <meta name="author" content="運営Sky System 協力 動画係サークルマイクラサーバー運営部">
   <style>
     /* 基本のスタイル */
     body {
@@ -179,28 +183,22 @@
   </div>
 
   <div class="container">
-    <!-- サーバー情報セクション -->
     <div class="info-section">
       <h2>サーバー情報</h2>
       <div class="server-details">
         <div>
           <h3>JAVA版 IPアドレス</h3>
-          <p>147.185.221.25:10288</p>
+          <p>mcsk.aternos.me</p>
         </div>
         <div>
           <h3>統合版 IPアドレス</h3>
-          <p>147.185.221.25</p>
-          <p>ポート: 1304</p>
+          <p>mcsk.aternos.me</p>
+          <p>Port:41763</p>
         </div>
         <div>
           <h3>バージョン</h3>
           <p>最新バージョン対応</p>
         </div>
-        <div>
-          <h3>FastServer v4対応</h3>
-          <p>CONNETに対応！</p>
-        </div>
-      </div>
     </div>
 
     <!-- サーバーへの入り方 -->
@@ -208,23 +206,20 @@
       <h2>マイクラサーバーへの入り方</h2>
       <ul class="how-to-list">
         <li>
-          <strong>JAVA版:</strong> <a href="java_guide.html" target="_self">JAVA版の詳細な入り方はこちら</a>
+          <strong>JAVA版:</strong> <a href='/java_guide' target='_self'>JAVA版の詳細な入り方はこちら</a>
         </li>
         <li>
-          <strong>スマホやタブレット（統合版）:</strong> <a href="bedrock_guide.html" target="_self">統合版の詳細な入り方はこちら</a>
+          <strong>スマホやタブレット（統合版）:</strong> <a href='/bedrock_guide' target='_self'>統合版の詳細な入り方はこちら</a>
         </li>
         <li>
-          <strong>コンソール版（Xbox/PS/Nintendo Switchなど）:</strong> <a href="console_guide.html" target="_self">コンソール版の詳細な入り方はこちら</a>
-        </li>
-        <li>
-          <strong>FastServerV4 CONNETから:</strong> <a href="conect_guide.html" target="_self">FastServer v4 CONNECTからの詳細な入り方はこちら</a>
+          <strong>コンソール版（Xbox/PS/Nintendo Switchなど）:</strong> <a href='/console_guide' target='_self'>コンソール版の詳細な入り方はこちら</a>
         </li>
       </ul>
     </div>
   </div>
 
   <footer>
-    <p>© 2025 TNK首都圏動画係マイクラサーバー運営 | <a href="#">プライバシーポリシー</a></p>
+    <p>© 2025 動画係公式マイクラ鯖 | 協力 動画係サークルマイクラサーバー運営</p>
   </footer>
 
   <script>
