--- a/java_guide.html
+++ b/java_guide.html
@@ -1,9 +1,20 @@
+
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>動画係マイクラサーバー - JAVA版の入り方</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>動画係公式マイクラ鯖</title>
+    <!-- ファビコン -->
+  <link rel=”icon” href=“/favicon.ico”>
+  <link rel=”icon” type=”image/vnd.microsoft.icon” href=“/favicon.ico”>
+  <link rel=”shortcut icon” href=”/favicon.ico”>
+  <!-- ページの説明 -->
+  <meta name="description" content="動画係マイクラサーバーはJAVA版と統合版に対応したクロスプレイ可能なサーバーです。FastServer v4接続方法を含む、多様なサーバー情報を提供します。ただしJAVA限定です。">
+  <!-- 検索キーワード -->
+  <meta name="keywords" content="Minecraft, マイクラ, サーバー, クロスプレイ, JAVA版, 統合版, FastServer v4, Minecraftサーバー,動画係,TNK,TNK首都圏,TNK首都圏局まいくら鯖部">
+  <!-- サイト運営者情報 -->
+  <meta name="author" content="運営Sky System 協力 動画係サークルマイクラサーバー運営部">
     <style>
         body {
             margin: 0;
@@ -84,7 +95,7 @@
             <h2>JAVA版サーバーに接続する方法</h2>
             <ol>
                 <li>
-                    **Minecraft JAVA版(1.21.4)を起動**<br>
+                    **Minecraft JAVA版を起動**<br>
                     Minecraftのランチャーを開き、最新バージョンまたはサーバー対応バージョンを選択してゲームを起動します。
                 </li>
                 <li>
@@ -96,7 +107,7 @@
                     「サーバーを追加」ボタンをクリックし、以下の情報を入力します：
                     <ul>
                         <li><strong>サーバー名:</strong> お好きな名前を入力</li>
-                        <li><strong>サーバーアドレス:</strong> <code>147.185.221.25:10288</code></li>
+                        <li><strong>サーバーアドレス:</strong> <code>mcsk.aternos.me</code></li>
                     </ul>
                 </li>
                 <li>
@@ -114,11 +125,18 @@
                 <li>サーバーの推奨バージョンを使用しているか確認。</li>
             </ul>
         </section>
-        <p>さらにサポートが必要な場合は、<a href="support.html">こちらのサポートページ</a>をご覧ください。</p>
+      <p>さらにサポートが必要な場合は、<a href="https://discord.gg/DAwuQngsDb">こちらの公式Discord</a>をご覧ください。</p>
     </div>
 
     <footer>
-        <p>© 2025 TNK首都圏動画係マイクラサーバー運営 | <a href="#">プライバシーポリシー</a></p>
+        <<p>© 2025 動画係公式マイクラ鯖 | 運営Sky System 協力 動画係サークルマイクラサーバー運営部</p>
     </footer>
 </body>
 </html>
+
+
+
+
+
+
+
