--- a/bedrock_guide.html
+++ b/bedrock_guide.html
@@ -1,9 +1,20 @@
+
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>マイクラサーバー - 統合版の入り方</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>動画係公式マイクラ鯖</title>
+    <!-- ファビコン -->
+  <link rel=”icon” href=“/favicon.ico”>
+  <link rel=”icon” type=”image/vnd.microsoft.icon” href=“/favicon.ico”>
+  <link rel=”shortcut icon” href=”/favicon.ico”>
+  <!-- ページの説明 -->
+  <meta name="description" content="動画係マイクラサーバーはJAVA版と統合版に対応したクロスプレイ可能なサーバーです。FastServer v4接続方法を含む、多様なサーバー情報を提供します。ただしJAVA限定です。">
+  <!-- 検索キーワード -->
+  <meta name="keywords" content="Minecraft, マイクラ, サーバー, クロスプレイ, JAVA版, 統合版, FastServer v4, Minecraftサーバー,動画係,TNK,TNK首都圏,TNK首都圏局まいくら鯖部">
+  <!-- サイト運営者情報 -->
+  <meta name="author" content="運営Sky System 協力 動画係サークルマイクラサーバー運営部">
     <style>
         body {
             margin: 0;
@@ -107,8 +118,8 @@
                     **サーバー情報を入力**<br>
                     以下の情報を入力してください：
                     <ul>
-                        <li><strong>サーバーアドレス:</strong> 147.185.221.25</li>
-                        <li><strong>ポート番号:</strong> 1304</li>
+                        <li><strong>サーバーアドレス:</strong> msck.aternos.me</li>
+                        <li><strong>ポート番号:</strong> 41763</li>
                         <li><strong>表示名（任意）:</strong> お好きな名前を入力（例: MyServer）</li>
                     </ul>
                 </li>
@@ -126,7 +137,13 @@
     </div>
 
     <footer>
-        <p>© 2025 マイクラサーバー運営 | <a href="#">プライバシーポリシー</a></p>
+        <<p>© 2025 動画係公式マイクラ鯖 | 運営Sky System 協力 動画係サークルマイクラサーバー運営部</p>
     </footer>
 </body>
 </html>
+
+
+
+
+
+
