--- a/index.html
+++ b/index.html
@@ -161,7 +161,6 @@
   <header>
     <h1>動画係マイクラサーバー - クロスプレイ対応</h1>
     <p>JAVA版も統合版も楽しめるクロスプレイ対応サーバー</p>
-    <p>現在サーバーは閉じています。ご了承ください。</p>
   </header>
 
   <!-- カルーセルセクション -->
@@ -169,12 +168,12 @@
     <div class="carousel-container">
       <div class="carousel-item">
         <div class="video-wrapper">
-        <iframe width="1280" height="720" src="https://www.youtube.com/embed/LtWknycYk84" title="動画係マイクラ鯖紹介動画" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="1296" height="729" src="https://www.youtube.com/embed/3EaD8dUJHlE" title="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
       </div>
       <div class="carousel-item">
         <div class="video-wrapper">
-        <iframe width="1280" height="720" src="https://www.youtube.com/embed/TPTh50-w7XM" title="動画係マイクラ鯖ワールド全部紹介してみた" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="1296" height="729" src="https://www.youtube.com/embed/TPTh50-w7XM" title="動画係マイクラ鯖ワールド全部紹介してみた" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
       </div>
     </div>
