--- a/console_guide.html
+++ b/console_guide.html
@@ -142,7 +142,7 @@
             <h2>コンソール版サーバーに接続する方法</h2>
             <ol>
                 <li>
-                    **更に詳しい接続方法は<a href="https://x.gd/fj4Wi">こちら</a>で紹介しています。
+                    **更に詳しい接続方法は<a href="https://invite.svcn.pgw.jp/go/?name=%E5%8B%95%E7%94%BB%E4%BF%82%E3%83%9E%E3%82%A4%E3%82%AF%E3%83%A9%E3%82%B5%E3%83%BC%E3%83%90%E3%83%BC&ip=msck24.ddo.jp&port=25565&list=on">こちら</a>で紹介しています。
                 <li>
                     **Microsoftアカウントにログイン**<br>
                     Minecraftにログインするには、Microsoftアカウントが必要です。
@@ -152,7 +152,7 @@
                     マイクラの「フレンド追加」で「svcn1」または「svcn2」と入力し、フレンドリクエストを送信します。
                 </li>
                 <li>
-                  <a href="https://www.svcn.pgw.jp/gemertag">入れない場合こちらのサイトを御覧くださう</a>
+                  <a href="https://www.svcn.pgw.jp/gemertag">入れない場合こちらのサイトを御覧ください</a>
                 </li>
                 <li>
                     **外部サーバーへ接続**<br>
@@ -180,24 +180,23 @@
                     <p>以下の情報を入力してサーバーを追加します</p>
                     <p>※説明は任意で入力してください</p>
 
-                    <div class="info-panel">
+          <div class="info-panel">
                         <div class="copy-section">
                             <strong>IPアドレス:</strong>
-                            <input type="text" class="copy-input" id="serverIP" value="mcsk.aternos.me" readonly>
+                            <input type="text" class="copy-input" id="serverIP" value="mc.example.com" readonly>
                             <button class="copy-button" data-target="serverIP">コピー</button>
                         </div>
                         <div class="copy-section">
                             <strong>ポート番号:</strong>
-                            <input type="text" class="copy-input" id="serverPort" value="41763" readonly>
+                            <input type="text" class="copy-input" id="serverPort" value="19132" readonly>
                             <button class="copy-button" data-target="serverPort">コピー</button>
                         </div>
                         <div class="copy-section">
                             <strong>サーバー名:</strong>
-                            <input type="text" class="copy-input" id="serverName" value="41763" readonly>
+                            <input type="text" class="copy-input" id="serverName" value="マイクラ日本サーバー" readonly>
                             <button class="copy-button" data-target="serverName">コピー</button>
                         </div>
                     </div>
-                </div>
                 </li>
                 <li>
                     **保存するをオンまたはオフにする<br>
@@ -226,3 +225,4 @@
     </footer>
 </body>
 </html>
+
