--- a/index.html
+++ b/index.html
@@ -187,16 +187,21 @@
       <div class="server-details">
         <div>
           <h3>JAVA版 IPアドレス</h3>
-          <p>mcsk.aternos.me</p>
+          <p>mcsk24.ddo.jp</p>
         </div>
         <div>
           <h3>統合版 IPアドレス</h3>
-          <p>mcsk.aternos.me</p>
-          <p>Port:41763</p>
+          <p>mcsk24.ddo.jp</p>
+          <p>Port:25565</p>
         </div>
         <div>
+          <h3>サーバーマップ</h3>
+          <p>http://mcsk24.ddo.jp:25575</p>
+        </div>
+
+        <div>
           <h3>バージョン</h3>
-          <p>最新バージョン対応</p>
+          <p>〜1.21.8(最新は一部非対応)</p>
         </div>
     </div>
 
