--- a/index.html
+++ b/index.html
@@ -201,10 +201,10 @@
 
         <div>
           <h3>バージョン</h3>
-          <p>〜1.21.8(最新は一部非対応)</p>
+          <p>〜1.21.11(最新は一部非対応)</p>
         </div>
     </div>
-
+<a href="https://minecraft.jp/servers/msck24.ddo.jp"><img src="https://minecraft.jp/servers/msck24.ddo.jp/banner/1/560x95.png"/></a>
     <!-- サーバーへの入り方 -->
     <div class="how-to-section">
       <h2>マイクラサーバーへの入り方</h2>
